--- a/semana3/sistema-loja/funcionarios.html
+++ b/semana3/sistema-loja/funcionarios.html
@@ -19,7 +19,11 @@
     </div>
 
     <h2>Funcionários</h2>
-    <!-- Crie uma lista de funcionários usando as tags que você aprendeu hoje abaixo \/ -->
-        
+    <ul>
+        <li>João</li>
+        <li>Maria</li>
+        <li>Pedro</li>
+        <li>Shakira</li>
+    </ul>        
 </body>
 </html>
