add products list

--- a/semana3/sistema-loja/ctrl-estoque.html
+++ b/semana3/sistema-loja/ctrl-estoque.html
@@ -30,30 +30,30 @@
 
         <tr>
             <td><img src="" alt=""/></td>
-            <td> * </td>
-            <td> * </td>
-            <td> * </td>
+            <td> Grampeador </td>
+            <td> R$: 2,00 </td>
+            <td> 100 </td>
         </tr>
 
         <tr>
             <td><img src="" alt=""/></td>
-            <td> * </td>
-            <td> * </td>
-            <td> * </td>
+            <td> Caneta </td>
+            <td> R$: 1,00 </td>
+            <td> 500 </td>
         </tr>
 
         <tr>
             <td><img src="" alt=""/></td>
-            <td> * </td>
-            <td> * </td>
-            <td> * </td>
+            <td> Lápis </td>
+            <td> R$: 0,50 </td>
+            <td> 450 </td>
         </tr>
 
         <tr>
             <td><img src="" alt=""/></td>
-            <td> * </td>
-            <td> * </td>
-            <td> * </td>
+            <td> Copo do Huke </td>
+            <td> R$: 5,00 </td>
+            <td> 1 </td>
         </tr>
         
         <!-- Crie mais uma linha desta tabela abaixo \/ -->
