add one more line

--- a/semana3/sistema-loja/ctrl-estoque.html
+++ b/semana3/sistema-loja/ctrl-estoque.html
@@ -55,6 +55,13 @@
             <td> R$: 5,00 </td>
             <td> 1 </td>
         </tr>
+
+        <tr>
+            <td><img src="" alt=""/></td>
+            <td> Copo do Luke </td>
+            <td> R$: 5,00 </td>
+            <td> 1 </td>
+        </tr>
         
         <!-- Crie mais uma linha desta tabela abaixo \/ -->
 
