add images and src on crl-estoque

--- a/semana3/sistema-loja/ctrl-estoque.html
+++ b/semana3/sistema-loja/ctrl-estoque.html
@@ -29,36 +29,36 @@
         </tr>
 
         <tr>
-            <td><img src="" alt=""/></td>
+            <td><img src="./img/grampeador.jpg" alt="grampeador"/></td>
             <td> Grampeador </td>
             <td> R$: 2,00 </td>
             <td> 100 </td>
         </tr>
 
         <tr>
-            <td><img src="" alt=""/></td>
+            <td><img src="./img/caneta.jpg" alt="caneta"/></td>
             <td> Caneta </td>
             <td> R$: 1,00 </td>
             <td> 500 </td>
         </tr>
 
         <tr>
-            <td><img src="" alt=""/></td>
+            <td><img src="./img/lapis.jpg" alt="lápis"/></td>
             <td> Lápis </td>
             <td> R$: 0,50 </td>
             <td> 450 </td>
         </tr>
 
         <tr>
-            <td><img src="" alt=""/></td>
-            <td> Copo do Huke </td>
+            <td><img src="./img/copo_huk.jpg" alt="Copo Huk"/></td>
+            <td> Copo do Huk </td>
             <td> R$: 5,00 </td>
             <td> 1 </td>
         </tr>
 
         <tr>
-            <td><img src="" alt=""/></td>
-            <td> Copo do Luke </td>
+            <td><img src="./img/copo_star_wars.jpg" alt="copo star wars"/></td>
+            <td> Copo do Star Wars </td>
             <td> R$: 5,00 </td>
             <td> 1 </td>
         </tr>
