--- a/semana3/sistema-loja/index.html
+++ b/semana3/sistema-loja/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nome da Loja</title>
+    <title>Papelaria do Lado</title>
 </head>
 <body>
     <div>
-        <h1>Bem-vind@ ao <em>nome da loja</em>!</h1>
-        <p>Frase de chamada para sua loja</p>
+        <h1>Bem-vind@ à <em>Papelaria do Lado</em>!</h1>
+        <p>Venha dar uma passadinha depois de comprar o seu pão.</p>
     </div>
 
-    <div>
+    <div style="background-color: aquamarine; height: 4rem;">
         <a href="./index.html">Página Inicial</a>
         <a href="./ctrl-estoque.html">Controle de Estoque</a>
         <a href="./add-produto.html">Adicionar Produto</a>
@@ -20,16 +20,29 @@
     </div>
 
     <div>
-        <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
+        <p>
+            Aqui você tem acesso, quase imediato, à todos os materiais escolares
+            Além de imprimir trabalhos escolares de última hora!
+        </p>
+
     </div>
 
     <div>
         <p>Siga-nos nas redes sociais!</p>
 
         <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+            <img 
+                src="https://image.flaticon.com/icons/png/512/25/25305.png"
+                width="5%"
+            />
+            <img 
+                src="https://image.flaticon.com/icons/png/512/25/25425.png"
+                width="5%"
+            />
+            <img 
+                src="https://image.flaticon.com/icons/png/512/8/8800.png"
+                width="5%"
+            />
         </div>
     </div>
 </body>
