--- a/semana3/sistema-loja/index.html
+++ b/semana3/sistema-loja/index.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="stylesheet" href="./styles/global.css">
+
     <title>Papelaria do Lado</title>
 </head>
 <body>
-    <div>
-        <h1>Bem-vind@ à <em>Papelaria do Lado</em>!</h1>
-        <p>Venha dar uma passadinha depois de comprar o seu pão.</p>
-    </div>
-
-    <div style="background-color: aquamarine; height: 4rem;">
-        <a href="./index.html">Página Inicial</a>
-        <a href="./ctrl-estoque.html">Controle de Estoque</a>
-        <a href="./add-produto.html">Adicionar Produto</a>
-        <a href="./funcionarios.html">Funcionários</a>
-    </div>
+    <header>
+        <div class="welcome-text">
+            <h1>Bem-vind@ à <em>Papelaria do Lado</em>!</h1>
+            <p>Venha dar uma passadinha depois de comprar o seu pão.</p>
+        </div>
+    
+        <div class="menu">
+            <a href="./index.html">Página Inicial</a>
+            <a href="./ctrl-estoque.html">Controle de Estoque</a>
+            <a href="./add-produto.html">Adicionar Produto</a>
+            <a href="./funcionarios.html">Funcionários</a>
+        </div>
+    </header>
 
     <div>
         <p>
@@ -30,20 +35,19 @@
     <div>
         <p>Siga-nos nas redes sociais!</p>
 
-        <div>
-            <img 
-                src="https://image.flaticon.com/icons/png/512/25/25305.png"
-                width="5%"
-            />
-            <img 
-                src="https://image.flaticon.com/icons/png/512/25/25425.png"
-                width="5%"
-            />
-            <img 
-                src="https://image.flaticon.com/icons/png/512/8/8800.png"
-                width="5%"
-            />
-        </div>
+        <footer>
+            <div class="social-media">
+                <img 
+                    src="https://image.flaticon.com/icons/png/512/25/25305.png"
+                />
+                <img 
+                    src="https://image.flaticon.com/icons/png/512/25/25425.png"
+                />
+                <img 
+                    src="https://image.flaticon.com/icons/png/512/8/8800.png"
+                />
+            </div>
+        </footer>
     </div>
 </body>
 </html>
