--- a/semana3/sistema-loja/index.html
+++ b/semana3/sistema-loja/index.html
@@ -24,18 +24,19 @@
         </div>
     </header>
 
-    <div>
-        <p>
-            Aqui você tem acesso, quase imediato, à todos os materiais escolares
-            Além de imprimir trabalhos escolares de última hora!
-        </p>
-
-    </div>
-
-    <div>
-        <p>Siga-nos nas redes sociais!</p>
-
-        <footer>
+    <main>
+        <div>
+            <p>
+                Aqui você tem acesso, quase imediato, à todos os materiais escolares
+                Além de imprimir trabalhos escolares de última hora!
+            </p>
+    
+        </div>
+    </main>
+    
+    <footer>
+        <div>
+            <p>Siga-nos nas redes sociais!</p>
             <div class="social-media">
                 <img 
                     src="https://image.flaticon.com/icons/png/512/25/25305.png"
@@ -47,7 +48,7 @@
                     src="https://image.flaticon.com/icons/png/512/8/8800.png"
                 />
             </div>
+        </div>
         </footer>
-    </div>
 </body>
 </html>
