--- a/semana3/sistema-loja/index.html
+++ b/semana3/sistema-loja/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/home.css">
 
     <title>Papelaria do Lado</title>
 </head>
