--- a/semana3/sistema-loja/ctrl-estoque.html
+++ b/semana3/sistema-loja/ctrl-estoque.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" href="./styles/global.css">
-
+    <link rel="stylesheet" href="./styles/ctrl-estoque.css">
     
     <title>Controle de Estoque</title>
 </head>
