--- a/semana3/sistema-loja/funcionarios.html
+++ b/semana3/sistema-loja/funcionarios.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" href="./styles/global.css">
-
+    <link rel="stylesheet" href="./styles/funcionarios.css">
     
     <title>Funcionários</title>
 </head>
