--- a/semana3/sistema-loja/add-produto.html
+++ b/semana3/sistema-loja/add-produto.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./add-produto.html">
+    <link rel="stylesheet" href="./styles/add-produto.css">
 
     <title>Adicionar Produto</title>
 </head>
