--- a/semana3/portifolio/index.html
+++ b/semana3/portifolio/index.html
@@ -21,9 +21,9 @@
             <h1>Tiago Kodama</h1>
 
             <ul>
-                <li>Home</li>
+                <li><a href="index.html">Home</a></li>
                 <li>Portifólio</li>
-                <li>Formação</li>
+                <li><a href="formacao-academica.html">Formação</a></li>
                 <li>Sobre</li>
                 <li>Contato</li>
             </ul>
