--- a/semana3/portifolio/index.html
+++ b/semana3/portifolio/index.html
@@ -24,7 +24,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li>Portifólio</li>
                 <li><a href="formacao-academica.html">Formação</a></li>
-                <li>Sobre</li>
+                <li><a href="sobre.html">Sobre</a></li>
                 <li>Contato</li>
             </ul>
         </header>
