--- a/semana3/portifolio/formacao-academica.html
+++ b/semana3/portifolio/formacao-academica.html
@@ -7,7 +7,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="./formacao-academica.css">
+    <link rel="stylesheet" href="./main.css">
 
     <!-- Fots -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
