--- a/semana3/portifolio/html/formacao-academica.html
+++ b/semana3/portifolio/html/formacao-academica.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/formacao-academica.css">
 
     <!-- Fots -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,58 +23,64 @@
             <h1>Tiago Kodama</h1>
 
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li>Portifólio</li>
-                <li><a href="formacao-academica.html">Formação</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li>Contato</li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/html/portifolio.html">Portifólio</a></li>
+                <li><a href="/html/formacao-academica.html">Formação</a></li>
+                <li><a href="/html/sobre.html">Sobre</a></li>
+                <li><a href="/html/contato.html">Contato</a></li>
             </ul>
         </header>
     
         <main>
             <h2>
-                Formação acadêmica
+                Formação
             </h2>
                
                 <article>
                     <div class="card">
-                        <img src="./img/labenu.png" alt="Labenu">
-                        <p>
-                            by injected humour, or randomised words which
-                             don't look even slightly believable.
-                             If you are going to use a passage of Lorem Ipsum,
-                              you need to be sure there isn't anything embarrassing hidden in 
-                              the middle of text. All the Lorem Ipsum generators on the Internet te
-                              nd to repeat predefined chunks as necessary, making this the fi
-                              rst true generator on the Internet. It uses a dictionary of over 2
-                              00 Latin words, combined with a handful of 
-                        </p>
+                        <img src="/img/labenu.png" alt="Labenu">
+                        <div class="descricao">
+                            <p>
+                                <strong>
+                                    Labenu - Fullstack                          
+                                </strong>
+                            </p>
+                            <p>
+                                Junho de 2021- Dezembro de 2021
+                            </p>
+                            <p>
+                                Bootcamp de 1000 horas.
+                            </p>
+                            <p>
+                                HTML, CSS, Javascript, React, Jest, Node, Typescript, MySQL, AWS e Firebase.
+                            </p>
+                        </div>
                     </div>
                     <div class="card">
-                        <img src="./img/labenu.png" alt="Labenu">
-                        <p>
-                            by injected humour, or randomised words which
-                             don't look even slightly believable.
-                             If you are going to use a passage of Lorem Ipsum,
-                              you need to be sure there isn't anything embarrassing hidden in 
-                              the middle of text. All the Lorem Ipsum generators on the Internet te
-                              nd to repeat predefined chunks as necessary, making this the fi
-                              rst true generator on the Internet. It uses a dictionary of over 2
-                              00 Latin words, combined with a handful of 
-                        </p>
+                        <img src="/img/unifesp.png" alt="unifesp">
+                        <div class="descricao">
+                            <p>
+                                <strong>
+                                    Unifesp - Ciências Atuariais                          
+                                </strong>
+                            </p>
+                            <p>
+                                Março de 2021- Julho de 2026
+                            </p>
+                        </div>
                     </div>
                     <div class="card">
-                        <img src="./img/labenu.png" alt="Labenu">
-                        <p>
-                            by injected humour, or randomised words which
-                             don't look even slightly believable.
-                             If you are going to use a passage of Lorem Ipsum,
-                              you need to be sure there isn't anything embarrassing hidden in 
-                              the middle of text. All the Lorem Ipsum generators on the Internet te
-                              nd to repeat predefined chunks as necessary, making this the fi
-                              rst true generator on the Internet. It uses a dictionary of over 2
-                              00 Latin words, combined with a handful of 
-                        </p>
+                        <img src="/img/usp.jpg" alt="usp">
+                        <div class="descricao">
+                            <p>
+                                <strong>
+                                    USP - Fìsica                          
+                                </strong>
+                            </p>
+                            <p>
+                                Março de 2014- Julho de 2017
+                            </p>
+                        </div>
                     </div>
                 </article>
         </main>
@@ -81,7 +88,7 @@
         <footer>
             <div class="footer">
                 <div class="about">
-                    <img src="./img/perfil.jpg" alt="perfil">
+                    <img src="/img/perfil.jpg" alt="perfil">
                     <p>
                         type specimen book. It has survived not only five centuries, 
                         but also the leap into electronic typesetting, remaining ess
