--- a/semana3/portifolio/index.html
+++ b/semana3/portifolio/index.html
@@ -82,7 +82,7 @@
         <footer>
             <div class="footer">
                 <div class="about">
-                    <img src="./img/perfil.jpg" alt="perfil">
+                    <img src="/img/perfil.jpg" alt="perfil">
                     <p>
                         Sou formado em física e dei aulas por 10 anos.
                         Tenho experiência em desenvolver diversos scripts e programas
