--- a/semana3/portifolio/html/formacao-academica.html
+++ b/semana3/portifolio/html/formacao-academica.html
@@ -90,21 +90,23 @@
                 <div class="about">
                     <img src="/img/perfil.jpg" alt="perfil">
                     <p>
-                        type specimen book. It has survived not only five centuries, 
-                        but also the leap into electronic typesetting, remaining ess
-                        entially unchanged. It was popularised in the 1960s with the
-                         release of Letraset sheets co
+                        Sou formado em física e dei aulas por 10 anos.
+                        Tenho experiência em desenvolver diversos scripts e programas
+                        para diversos fins. Atualmente, estou estudando desenvolvimento web 
+                        na Labenu e aperfeiçoando os meus conhecimentos em tecnologias Front-end,
+                        Back-end e Banco de Dados.
                     </p>
                 </div>
                 <p>
-                        Fullstack developer
+                        Desenvolvedor Fullstack
                 </p>
             </div>
             <div class="links">
                 <ul>
-                    <li><a href="#"><h3>Home</h3><h4>Lertrajetória</h4></a></li>
-                    <li><a href="#"><h3>Home</h3><h4>Lertrajetória</h4></a></li>
-                    <li><a href="#"><h3>Home</h3><h4>Lertrajetória</h4></a></li>
+                    <li><a href="/html/sobre.html"><h3>Sobre</h3><h4>Saiba quem sou eu</h4></a></li>
+                    <li><a href="/html/formacao-academica.html"><h3>Formação</h3><h4>Entenda onde me formei</h4></a></li>
+                    <li><a href="/html/portifolio.html"><h3>Portifólio</h3><h4>Avalie os meus trabalhos anteriores</h4></a></li>
+                    <li><a href="/html/contato.html"><h3>Contato</h3><h4>Entre em contato</h4></a></li>
                 </ul>
             </div>
         </footer>
