--- a/semana3/portifolio/html/sobre.html
+++ b/semana3/portifolio/html/sobre.html
@@ -23,11 +23,11 @@
             <h1>Tiago Kodama</h1>
 
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li>Portifólio</li>
-                <li><a href="formacao-academica.html">Formação</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li>Contato</li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/html/portifolio.html">Portifólio</a></li>
+                <li><a href="/html/formacao-academica.html">Formação</a></li>
+                <li><a href="/html/sobre.html">Sobre</a></li>
+                <li><a href="/html/contato.html">Contato</a></li>
             </ul>
         </header>
     
