--- a/semana4/labetube/index.html
+++ b/semana4/labetube/index.html
@@ -18,10 +18,10 @@
             </form>
         </header>
         <main>
-            
+
         </main>
         <footer>
-
+            <p>Adicione nas redes sociais</p>
         </footer>
     </div>
 </body>
