--- a/semana4/labetube/index.html
+++ b/semana4/labetube/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Labetube</title>
 </head>
 <body>
@@ -15,6 +15,7 @@
             </h1>
             <form action="#">
                 <input type="text">
+                <button>Procurar</button>
             </form>
         </header>
         <main>
