--- a/semana4/labetube/index.html
+++ b/semana4/labetube/index.html
@@ -22,7 +22,7 @@
 
         </main>
         <footer>
-            <p>Adicione nas redes sociais</p>
+            <p>Adicione nas redes sociais &hearts;</p>
         </footer>
     </div>
 </body>
