--- a/semana4/labetube/index.html
+++ b/semana4/labetube/index.html
@@ -19,6 +19,12 @@
             </form>
         </header>
         <main>
+            <div class="card">
+                <video src="">
+                    <source src="" type="">
+                </video>
+                <p>Nome do video</p>
+            </div>
 
         </main>
         <footer>
