index: set main to div

--- a/semana4/labetube/details.html
+++ b/semana4/labetube/details.html
@@ -19,10 +19,10 @@
                 <button>Procurar</button>
             </form>
         </header>
-        <main>
+        <div class="main-home">
             <div class="video-container">
                 <h2>
-                    
+                    Vídeo 1
                 </h2>
                 <video controls>
                     <source src="https://storage.googleapis.com/future-apis.appspot.com/1.mp4">
