--- a/semana4/labetube/details.html
+++ b/semana4/labetube/details.html
@@ -19,7 +19,7 @@
                 <button>Procurar</button>
             </form>
         </header>
-        <div class="main-home">
+        <div class="main-details">
             <div class="video-container">
                 <h2>
                     Vídeo 1
@@ -29,7 +29,7 @@
                     Seu navegador não suporta esse tipo de vídeo.
                 </video>
             </div>
-        </main>
+        </div>
         <footer>
             <p>Adicione nas redes sociais &hearts;</p>
         </footer>
