video2: auto play

--- a/semana4/labetube/video1.html
+++ b/semana4/labetube/video1.html
@@ -24,8 +24,8 @@
                 <h2>
                     Vídeo 1
                 </h2>
-                <video controls>
-                    <source src="https://storage.googleapis.com/future-apis.appspot.com/1.mp4">
+                <video controls autoplay>
+                    <source src="https://storage.googleapis.com/future-apis.appspot.com/1.mp4" type="video/mp4">
                     Seu navegador não suporta esse tipo de vídeo.
                 </video>
             </div>
