--- a/semana4/labetube/video2.html
+++ b/semana4/labetube/video2.html
@@ -24,7 +24,7 @@
                 <h2>
                     Vídeo 2
                 </h2>
-                <video controls>
+                <video autoplay controls>
                     <source src="https://storage.googleapis.com/future-apis.appspot.com/2.mp4">
                     Seu navegador não suporta esse tipo de vídeo.
                 </video>
