--- a/semana4/responsividade/Desafio/index.html
+++ b/semana4/responsividade/Desafio/index.html
@@ -11,17 +11,17 @@
 <body>
     <header></header>
     <div class="container">
-        <div class="item 1">1</div>
-        <div class="item 2">2</div>
-        <div class="item 3">3</div>
-        <div class="item 4">4</div>
-        <div class="item 5">5</div>
-        <div class="item 6">6</div>
-        <div class="item 7">7</div>
-        <div class="item 8">8</div>
-        <div class="item 9">9</div>
-        <div class="item 10">10</div>
-        <div class="item 11">11</div>
+        <div class="item um">1</div>
+        <div class="item dois">2</div>
+        <div class="item tres">3</div>
+        <div class="item quatro">4</div>
+        <div class="item cinco">5</div>
+        <div class="item seis">6</div>
+        <div class="item sete">7</div>
+        <div class="item oito">8</div>
+        <div class="item nove">9</div>
+        <div class="item dez">10</div>
+        <div class="item onze">11</div>
     </div>
 </body>
 </html>
