style: div 3 and 6

--- a/semana4/responsividade/Desafio/index.html
+++ b/semana4/responsividade/Desafio/index.html
@@ -11,12 +11,18 @@
 <body>
     <header></header>
     <div class="container">
-        <div class="item um">1</div>
-        <div class="item dois">2</div>
-        <div class="item tres">3</div>
-        <div class="item quatro">4</div>
-        <div class="item cinco">5</div>
-        <div class="item seis">6</div>
+        <div class="block1-ext">
+            <div class="block1-int">
+                <div class="item um">1</div>
+                <div class="item dois">2</div>
+                <div class="item tres">3</div>
+            </div>
+            <div class="block1-int">
+                <div class="item quatro">4</div>
+                <div class="item cinco">5</div>
+                <div class="item seis">6</div>
+            </div>
+        </div>
         <div class="item sete">7</div>
         <div class="item oito">8</div>
         <div class="item nove">9</div>
