--- a/semana4/responsividade/Desafio/index.html
+++ b/semana4/responsividade/Desafio/index.html
@@ -23,8 +23,10 @@
                 <div class="item seis">6</div>
             </div>
         </div>
-        <div class="item sete">7</div>
-        <div class="item oito">8</div>
+        <div class="block2">
+            <div class="item sete">7</div>
+            <div class="item oito">8</div>
+        </div>
         <div class="item nove">9</div>
         <div class="item dez">10</div>
         <div class="item onze">11</div>
