--- a/semana4/responsividade/Desafio/index.html
+++ b/semana4/responsividade/Desafio/index.html
@@ -27,9 +27,11 @@
             <div class="item sete">7</div>
             <div class="item oito">8</div>
         </div>
-        <div class="item nove">9</div>
-        <div class="item dez">10</div>
-        <div class="item onze">11</div>
+        <div class="block3">
+            <div class="item nove">9</div>
+            <div class="item dez">10</div>
+            <div class="item onze">11</div>
+        </div>
     </div>
 </body>
 </html>
